moving bottom copy to align correctly

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ hr { border: solid #cdcdcd; border-width: 1px 0 0; clear: both; margin: 12px 30p
 
 #boardcontainer .tabs {
 	position: absolute;
-	bottom: -5px;
+	bottom: -8px;
 	left: 0px;
 	width: 500px;
 	height: 28px;
@@ -730,9 +730,7 @@ hr { border: solid #cdcdcd; border-width: 1px 0 0; clear: both; margin: 12px 30p
 	
 }
 
-#instagram_social p { color: #767676; font-family: Arial, Helvetica, sans-serif; font-size: 14px; width: 390px; 
-	
-}
+#instagram_social p { color: #767676; font-family: Arial, Helvetica, sans-serif; font-size: 14px; width: 390px; margin-left: 17px; }
 
 #instagram_social p a { color: #e75405; font-weight: bold;}
 
@@ -792,7 +790,7 @@ hr { border: solid #cdcdcd; border-width: 1px 0 0; clear: both; margin: 12px 30p
 
 
 #social { position: relative; float: left; padding: 20px 0 0 4px; width: 491px}
-#social p { color: #767676; font-family: Arial, Helvetica, sans-serif; font-size: 14px; width: 240px; margin: 0px 0px 0px 0px; }
+#social p { color: #767676; font-family: Arial, Helvetica, sans-serif; font-size: 14px; width: 240px; margin: 0px 0px 0px 0px; margin-left: 17px; }
 #social .links { position: relative; float: right; top: -21px; }
 #social .links li { position: relative; float: left; }
 /*
